--- a/templates/todo.html
+++ b/templates/todo.html
@@ -1,4 +1,5 @@
 <div class="container">
+	<todo-table></todo-table>
 	<table class="table">
 		<thead>
 			<tr>
@@ -7,7 +8,6 @@
 				<td><strong>Status</strong></td>
 			</tr>
 		</thead>
-		<tbody>
 			<tr ng-repeat="todo in todos">
 				<td>{{todo.title}}</td>
 				<td>{{todo.description}}</td>
@@ -17,7 +17,6 @@
 					<button ng-click="deleteTodo(id)"><span class="glyphicon glyphicon-trash"></span></button>
 				</td>
 			</tr>
-		</tbody>
 	</table>
 	<button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#todo-modal">Create New Todo Item</button>
 
