--- a/templates/directives/todo-table.html
+++ b/templates/directives/todo-table.html
@@ -4,6 +4,7 @@
             <td><strong>Title</strong></td>
             <td><strong>Description</strong></td>
             <td><strong>Status</strong></td>
+            <td><strong>Actions</strong></td>
         </tr>
     </thead>
     <tr ng-repeat="todo in todos">
@@ -13,6 +14,6 @@
         <td>
             <button ng-click="editTodo(todo.id)"><span class="glyphicon glyphicon-edit"></span></button>
             <button ng-click="deleteTodo(todo.id)"><span class="glyphicon glyphicon-trash"></span></button>
-      </td>
+        </td>
     </tr>
 </table>
