changes to image styling

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,6 @@
 <div>
 	<h1>{{title}}</h1>
+	<div>
 	<img src="https://s-media-cache-ak0.pinimg.com/originals/ef/94/15/ef9415ed2cd1f78d9b5008860225af78.jpg">
+	</div>
 </div>
