--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
 body {
 			padding-top: 70px;
 			background-color: lightblue;
+			font-family: 'Gochi Hand', cursive;
+			font-size: x-large;
 		}
 h1 {
 			text-align: center;
 			color: red;
 		}
 img {
-	width: 100%;
-	height: 100%;
+	width: 40%;
+	height: 40%;
+	margin-left: 30%;
 }
