--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,9 @@ img {
 	height: 40%;
 	margin-left: 30%;
 }
+
+@media (max-width: 768px) {
+    .navbar-fixed-top {
+    	position: static;
+    }
+}
