removed padding top on body no fixed top

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-			padding-top: 70px;
+			/*padding-top: 70px;*/
 			background-color: lightblue;
 			font-family: 'Gochi Hand', cursive;
 			font-size: x-large;
